Fix a bug that caused page-background overflow

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ header {
   color: #1F2937;
   font-size: 36px;
   font-style: italic;
-  width: 700px;
+  max-width: 700px;
 }
 
 #source {
